Fully functional - hosted at omegafox.me

--- a/src/sections/_header.scss
+++ b/src/sections/_header.scss
@@ -1,8 +1,6 @@
-@import '../styling/global.scss';
-
 .header-container {
     height: 100vh;
-    background-image: url(../img/bg_desktop.jpg);
+    background-image: url(img/bg_desktop.jpg);
     background-size: cover;
     background-attachment: fixed;
     color: white;
@@ -10,21 +8,12 @@
     flex-direction: column;
 }
 
-.menu-fox {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    transition: opacity 1s;
-}
-
-.menu-fox:hover {
-    opacity: 1;
-}
-
 .image-mask {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    flex-direction: column;
     flex: 1;
     flex-grow: 1;
     background-color: rgba(0,0,0,0.4);
